Corrigindo alguns bugs

--- a/CSS/styles2.css
+++ b/CSS/styles2.css
@@ -1,1 +1,2 @@
 /* ----------------------------------- Estilos da tela 2 ----------------------------------- */
+/* ----------------------------------- Banner do quiz ----------------------------------- */
