--- a/CSS/styles1.css
+++ b/CSS/styles1.css
@@ -31,24 +31,25 @@ header {
 /* ----------------------------------- Main ----------------------------------- */
 
 main {
-	width: 90vw;
 	margin: auto;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 }
-main .criadorDeQuiz {
-    width: 90%;
+.boxTela1{
+	width: 90vw;
+}
+.criadorDeQuiz {
 	height: 181px;
 	border: 1px solid #d4d4d4;
 	margin-bottom: 77px;
 }
-main .criadorDeQuiz .box {
+.criadorDeQuiz .box {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 }
-main .criadorDeQuiz p {
+.criadorDeQuiz p {
 	/*Falta um ajust fino*/
 	width: 250px;
 	height: 107px;
@@ -56,7 +57,7 @@ main .criadorDeQuiz p {
 	font-size: 20px;
 	color: #b9b9b9;
 }
-main .criadorDeQuiz button {
+.criadorDeQuiz button {
 	height: 40px;
 	font-weight: 400;
 	font-size: 21px;
@@ -64,11 +65,18 @@ main .criadorDeQuiz button {
 	border: 1px dotted #ec362d;
 	border-radius: 30px;
 }
-main .seusQuizzes{
+.seusQuizzes{
     margin-bottom: 48px;
+	display:flex;
+	flex-direction: column;
+	align-items: center;
 }
-
-main .quiz {
+.todosOsQuizzes{
+	display:flex;
+	flex-direction: column;
+	align-items: center;
+}
+.quiz {
 	width: 340px;
 	height: 181px;
 	margin-bottom: 14px;
@@ -93,12 +101,12 @@ main .quiz {
 }
 /* ----------------------------------- Media Querys ----------------------------------- */
 @media(min-width: 1100px){
-    main .quizzesBox{
+    .quizzesBox{
         display:flex;
         flex-wrap: wrap;
         justify-content: center;
     }
-    main .quizzesBox .quiz{
+    .quizzesBox .quiz{
         margin-right: 15px;
     }
 }
