--- a/CSS/styles2.css
+++ b/CSS/styles2.css
@@ -1,2 +1,9 @@
 /* ----------------------------------- Estilos da tela 2 ----------------------------------- */
 /* ----------------------------------- Banner do quiz ----------------------------------- */
+.boxTela2 {
+	width: 100%;
+}
+.bannerDoQuiz{
+    width:100%;
+    height: 142px;
+}
