--- a/CSS/styles1.css
+++ b/CSS/styles1.css
@@ -16,7 +16,6 @@ header {
 	width: 100%;
 	height: 69px;
 	background-color: #ec362d;
-	margin-bottom: 31px;
 }
 .textoHeader {
 	font-size: 37px;
@@ -37,6 +36,7 @@ main {
 	align-items: center;
 }
 .boxTela1{
+	margin-top:31px;
 	width: 90vw;
 }
 .criadorDeQuiz {
