Adicioado a função que insere os quizz dinamicamentes

--- a/CSS/styles2.css
+++ b/CSS/styles2.css
@@ -90,3 +90,6 @@
 }
 /* ----------------------------------- Banner do quiz ----------------------------------- */
 /* ----------------------------------- Perguntas do quiz ----------------------------------- */
+.offTela2{
+    display:none;
+}
