--- a/CSS/styles1.css
+++ b/CSS/styles1.css
@@ -7,9 +7,6 @@ body {
 	background-color: #e5e5e5;
 	font-family: 'Roboto', 'sans-serif';
 }
-.off {
-	display: none;
-}
 
 /* ----------------------------------- Header ----------------------------------- */
 header {
@@ -71,6 +68,14 @@ main {
 	flex-direction: column;
 	align-items: center;
 }
+.seusQuizzes .box{
+	display: flex;
+	justify-content: space-between; /* Não funciona */
+}
+.icon{
+	font-size: 30px;
+	color: #EC362D
+}
 .todosOsQuizzes{
 	display:flex;
 	flex-direction: column;
@@ -81,6 +86,11 @@ main {
 	height: 181px;
 	margin-bottom: 14px;
 	position: relative;
+}
+.quiz img{
+	width: 340px;
+	height: 181px;
+	border-radius: 5px;
 }
 .texto {
 	font-weight: 700;
@@ -109,4 +119,8 @@ main {
     .quizzesBox .quiz{
         margin-right: 15px;
     }
+}
+/* ---------------------------------------------------------------------- */
+.offTela1 {
+	display: none;
 }
